src/components/PageComponents/ProfilePage/MentionList/style.module.scss
.mentionList {
  @extend %contentBox;
  display: flex;
  align-items: center;
  flex-direction: column;

  height: var(--height);
  max-width: var(--max-width);

  margin-inline: auto;
  padding: $spacing;

  > h2 {
    text-align: center;
    margin-bottom: $spacing;
  }

  .mentionGrid {
    display: flex;
    flex-wrap: wrap;
    gap: $spacing;
    width: $card-width * 2 + $spacing;
  }

  @media screen and (max-width: $responsive-breakpoint) {
    max-width: none;

    .mentionGrid {
      width: 100%;
      justify-content: center;
    }
  }
}

